<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navSearch"
        android:icon="@drawable/ic_search"
        android:title="Search Note"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="collapseActionView|always" />

    <item
        android:id="@+id/navSettings"
        android:icon="@drawable/ic_setting"
        android:title="App Settings"
        app:showAsAction="collapseActionView|always" />

</menu>