<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="noteTitle"
            type="String" />

        <variable
            name="noteContent"
            type="String" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Activity.NoteEditorActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$Behavior">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/tbNavigationBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:menu="@menu/nav_note_editor"
                app:navigationIcon="@drawable/ic_arrow_left" />

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="10dp"
                android:layout_marginBottom="60dp">

                <EditText
                    android:id="@+id/tvNoteTitle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/open_sans_bold"
                    android:hint="@string/unNamedNote"
                    android:padding="5dp"
                    android:maxLength="50"
                    android:singleLine="false"
                    android:text="@{noteTitle}"
                    android:textSize="30dp"
                    app:errorEnabled="true" />

                <EditText
                    android:id="@+id/tvNoteContent"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/open_sans_medium"
                    android:hint="@string/writeNote"
                    android:padding="5dp"
                    android:text="@{noteContent}" />

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:gravity="center">

            <Button
                android:onClick="onClick"
                android:id="@+id/btnColor1"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/color1" />

            <Button
                android:onClick="onClick"
                android:id="@+id/btnColor2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/color3" />

            <Button
                android:onClick="onClick"
                android:id="@+id/btnColor3"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/color4" />

            <Button
                android:onClick="onClick"
                android:id="@+id/btnColor4"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/color5" />
        </LinearLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>