<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/itemDelete"
        android:icon="@drawable/ic_delete"
        android:title="Delete Note"
        app:showAsAction="always" />

    <item
        android:id="@+id/itemSave"
        android:icon="@drawable/ic_save"
        android:title="Save Note"
        app:showAsAction="always" />

</menu>